deployment-3-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8s-application
    env: prod
    ower: Leo
spec:
  replicas: 3
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name: mossad-web
          image: adv4000/k8sphp:version1
          ports:
            - containerPort: 80
