pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env : protd
    app : main
    tier : frontend
    owner : LeoTumo
spec:
  containers:
    - image: nginx:latest
      name: nginx
      ports:
        - containerPort: 80
