service-1-loadbalancer-single.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
spec:
  replicas: 3
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb    # Service will look for those POD Labels !!!!
    spec:
      containers:
        - name: kgb-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: LeoTumo
spec:
  selector:
    project: kgb      # Selecting PODS with those Labels
  ports:
    - name: app-listenere
      protocol: TCP
      port: 80        # Port on Load Balancer
      targetPort: 80  # Port on POD
  type: LoadBalancer
