ingress-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: www.adv-it.net
    http:
      paths:
      - path:"/page1"
        backend:
          serviceName: webx
          servicePort: 80
          
      - path:"/page2"
        backend:
          serviceName: webx
          servicePort: 80
  
      - path:"/page3"
        backend:
          serviceName: webx
          servicePort: 80
